--- a/configure.ac
+++ b/configure.ac
@@ -39,6 +39,5 @@ AC_CHECK_LIB([json-c], json_tokener_parse)
 
 AC_CONFIG_FILES([Makefile])
 AC_CONFIG_FILES([etc/callblocker/Makefile])
-AC_CONFIG_FILES([src/callblockerd/Makefile])
+AC_CONFIG_FILES([src/Makefile])
 AC_OUTPUT
-
