--- a/etc/callblocker/settings.json
+++ b/etc/callblocker/settings.json
@@ -1,13 +1,25 @@
 { 
   "log_level" : "debug",
-  "pjsip_log_level" : 0,
-  "sipaccounts" : [
-      { 
-        "mode" : "disabled",
-        "fromdomain" : "<yourdomain.net>",
-        "fromusername" : "<yourusername>",
-        "frompassword" : "<yourpassword>"
+  "analog" : {
+    "devices" : [
+      {
+        "enabled" : false,
+        "name" : "Analog Home Phone",
+        "dev" : "/dev/tty0"
       }
-  ]
+    ]
+  },
+  "sip" : {
+    "pjsip_log_level" : 0,
+    "accounts" : [
+        { 
+          "enabled" : false,
+          "name" : "SIP Home Phone",
+          "fromdomain" : "<yourdomain.net>",
+          "fromusername" : "<yourusername>",
+          "frompassword" : "<yourpassword>"
+        }
+    ]
+  }
 }
 
