--- a/etc/callblocker/settings.json
+++ b/etc/callblocker/settings.json
@@ -3,11 +3,11 @@
   "analog" : {
     "phones" : [
       {
-        "enabled" : false,
-        "name" : "Analog Home Phone",
-        "block_mode" : "logging_only",
+        "enabled"      : false,
+        "name"         : "Analog Home Phone",
+        "block_mode"   : "logging_only",
         "country_code" : "+41",
-        "device" : "/dev/ttyACM0"
+        "device"       : "/dev/ttyACM0"
       }
     ]
   },
@@ -15,15 +15,21 @@
     "pjsip_log_level" : 0,
     "accounts" : [
       { 
-        "enabled" : false,
-        "name" : "SIP Home Phone",
-        "block_mode" : "whitelists_and_blacklists",
-        "country_code" : "+41",
-        "from_domain" : "<yourdomain.net>",
-        "from_username" : "<yourusername>",
-        "from_password" : "<yourpassword>"
+        "enabled"       : false,
+        "name"          : "SIP Home Phone",
+        "block_mode"    : "whitelists_and_blacklists",
+        "country_code"  : "+41",
+        "from_domain"   : " <yourdomain.net>",
+        "from_username" : "<your username>",
+        "from_password" : "<your password>"
       }
     ]
+  },
+  "online" : {
+    "xxx" : {
+      "username" : "<your username>",
+      "password" : "<your password>"
+    }
   }
 }
 
