--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -18,4 +18,8 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 callblockerdir=$(datadir)/callblocker
-callblocker_DATA = CH_blacklist_K-Tipp.py
+callblocker_DATA = \
+  CH_blacklist_K-Tipp.py \
+  onlinecheck_tellows.de.py \
+  onlinecheck_phonespamfilter_com.py
+
