--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -20,6 +20,5 @@
 callblockerdir=$(datadir)/callblocker
 callblocker_DATA = \
   CH_blacklist_K-Tipp.py \
-  onlinecheck_tellows.de.py \
+  onlinecheck_tellows_de.py \
   onlinecheck_phonespamfilter_com.py
-
