--- a/etc/callblocker/tpl_settings.json
+++ b/etc/callblocker/tpl_settings.json
@@ -29,9 +29,14 @@
   },
   "online_credentials" : [
     {
-      "name"      : "tellows_de",
-      "partner"   : "<your partner name>",
-      "apikey"    : "<your api key>"
+      "name"    : "tellows_de",
+      "partner" : "<your partner name>",
+      "apikey"  : "<your api key>"
+    },
+    {
+      "name"     : "whocalled_us",
+      "username" : "<your name>",
+      "password" : "<your pass>"
     }
   ]
 }
