improved incoming call notice

--- a/etc/callblocker/tpl_settings.json
+++ b/etc/callblocker/tpl_settings.json
@@ -33,9 +33,9 @@
   },
   "online_credentials" : [
     {
-      "name"    : "tellows_de",
-      "partner" : "<your partner name>",
-      "apikey"  : "<your api key>"
+      "name"     : "tellows_de",
+      "username" : "<your partner name>",
+      "password" : "<your api key>"
     },
     {
       "name"     : "whocalled_us",
