add missing file

--- a/configure.ac
+++ b/configure.ac
@@ -48,5 +48,6 @@ AC_CONFIG_FILES([etc/systemd/system/Makefile])
 AC_CONFIG_FILES([usr/share/callblocker/Makefile])
 AC_CONFIG_FILES([src/Makefile])
 AC_CONFIG_FILES([var/www/callblocker/Makefile])
+AC_CONFIG_FILES([var/www/callblocker/js/Makefile])
 AC_OUTPUT
 
