--- a/etc/callblocker/blacklists/Makefile.am
+++ b/etc/callblocker/blacklists/Makefile.am
@@ -17,4 +17,5 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 callblockerblacklistsdir=$(sysconfdir)/callblocker/blacklists
-callblockerblacklists_DATA = tpl_main.json
+callblockerblacklists_DATA = README.md
+
