--- a/usr/share/callblocker/Makefile.am
+++ b/usr/share/callblocker/Makefile.am
@@ -20,8 +20,9 @@ callblockerdir=$(datadir)/callblocker
 callblocker_SCRIPTS = \
   blacklist_ktipp_ch.py \
   blacklist_toastedspam_com.py \
-  convert_CSV.py \
-  convert_LDIF.py \
+  import_CSV.py \
+  import_LDIF.py \
+  import_VCARD.py \
   onlinecheck_phonespamfilter_com.py \
   onlinecheck_tellows_de.py \
   onlinecheck_whocalled_us.py \
