--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -25,7 +25,7 @@ callblockerd_LDADD = \
 
 noinst_LIBRARIES = libcallblockerd.a
 libcallblockerd_a_SOURCES = \
-  Logger.cpp Notify.cpp FileLists.cpp FileList.cpp Helper.cpp Settings.cpp Block.cpp \
+  Logger.cpp Notify.cpp FileLists.cpp FileList.cpp Utils.cpp Settings.cpp Block.cpp \
   Phone.cpp SipPhone.cpp SipAccount.cpp AnalogPhone.cpp Modem.cpp
 
 AM_CPPFLAGS = -Wall -DSYSCONFDIR=\"${sysconfdir}\"
