--- a/Makefile.am
+++ b/Makefile.am
@@ -17,5 +17,4 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 # Subdirectories to descend into.
-SUBDIRS = etc src usr
-
+SUBDIRS = etc src usr test/callblockerd
