#11 new setting added: "block_invalid_cid"

--- a/etc/callblocker/tpl_settings.json
+++ b/etc/callblocker/tpl_settings.json
@@ -8,6 +8,7 @@
       "country_code"        : "+41",
       "block_mode"          : "whitelists_and_blacklists",
       "block_anonymous_cid" : false,
+      "block_invalid_cid"   : false,
       "online_check"        : "tellows_de",
       "online_lookup"       : "tel_search_ch",
       "from_domain"         : "<your domain>",
