- change setting.json: "from_domain" -> "domain",  "from_username" -> "username" and "from_password" -> "password" - and allow to specify a special relam and to used secure SIP

--- a/etc/callblocker/tpl_settings.json
+++ b/etc/callblocker/tpl_settings.json
@@ -11,9 +11,9 @@
       "block_invalid_cid":   false,
       "online_check":        "tellows_de",
       "online_lookup":       "tel_search_ch",
-      "from_domain":         "<your domain>",
-      "from_username":       "<your username>",
-      "from_password":       "<your password>"
+      "domain":              "<your sip domain>",
+      "username":            "<your sip username>",
+      "password":            "<your sip password>"
     }
   ],
   "online_credentials": [
