#17 add new cache directory

--- a/configure.ac
+++ b/configure.ac
@@ -44,6 +44,7 @@ dnl AC_CHECK_LIB([phonenumber], main, , [AC_MSG_ERROR("Linking against phonenumb
 AC_CONFIG_FILES([Makefile])
 AC_CONFIG_FILES([etc/Makefile])
 AC_CONFIG_FILES([etc/callblocker/Makefile])
+AC_CONFIG_FILES([etc/callblocker/cache/Makefile])
 AC_CONFIG_FILES([etc/callblocker/blacklists/Makefile])
 AC_CONFIG_FILES([etc/callblocker/whitelists/Makefile])
 AC_CONFIG_FILES([etc/systemd/system/Makefile])
