move TimerUtil into own file

--- a/usr/share/callblocker/Makefile.am
+++ b/usr/share/callblocker/Makefile.am
@@ -28,7 +28,7 @@ callblocker_SCRIPTS = \
   online_base.py \
   onlinecheck_phonespamfilter_com.py \
   onlinecheck_tellows_de.py \
-  onlinecheck_whocalled_us.py \
+  onlinecheck_youmail_com.py \
   onlinelookup_all.py \
   onlinelookup_dasoertliche_de.py \
   onlinelookup_dasschnelle_at.py \
