--- a/usr/var/www/callblocker/js/package.json
+++ b/usr/var/www/callblocker/js/package.json
@@ -1,8 +1,7 @@
 {
-  "dependencies":
-  {
-    "dojo": "^1.12.1",
-    "dijit": "^1.12.1",
-    "dojox": "^1.12.1"
+  "dependencies": {
+    "dijit": "~1.12.1",
+    "dojo": "~1.12.1",
+    "dojox": "~1.12.1"
   }
 }
