--- a/usr/var/www/meson.build
+++ b/usr/var/www/meson.build
@@ -1,6 +1,11 @@
-run_command('sh', '-c',
-  'cd @0@/usr/var/www/callblocker/js && npm --prefix ./vendor install'.format(meson.source_root())
+res = run_command('sh', '-c',
+                  'cd @0@/usr/var/www/callblocker/js && npm --prefix ./vendor install'.format(meson.source_root())
 )
+if res.returncode() == 0
+  message('npm install...')
+else
+  error('npm failed with @0@'.format(res.stderr()))
+endif
 
 install_subdir(
   'callblocker',
