--- a/meson.build
+++ b/meson.build
@@ -26,4 +26,5 @@ dep_phonenumber = cc.find_library('phonenumber')
 subdir('src')
 subdir('usr/share')
 subdir('usr/var/www')
+subdir('etc/callblocker')
 subdir('test/callblockerd')
