#35 service also needed for meson

--- a/meson.build
+++ b/meson.build
@@ -28,4 +28,5 @@ subdir('src')
 subdir('usr/share')
 subdir('usr/var/www')
 subdir('etc/callblocker')
+subdir('etc/systemd/system')
 subdir('test/callblockerd')
